test_suite/ERROR_undefined.out
ERROR_undefined.java: 8:  Semantic Error: Type `B` has not been defined
A.test: 0
