test_suite/ERROR_undefined.java
// -unused -no-style
class Main {
  public static void main(String[] a) {}
}

class A {
  public int test() {
    B b;
    return 1;
  }
}
